--- a/index.html
+++ b/index.html
@@ -12,15 +12,28 @@
     <header>
         <div>
             <img src="assests/images/logo.png" alt="logo">
+            <span>
+                <a href="login.html" target="_blank">Login</a>
+            </span>
         </div>
-        <span>Header Div</span>
     </header>
     <div>
-        <span>Content Div</span>
+        <span>Search Bar</span><br>
+        <a href="list.html"><img class="cities" src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" alt=""></a>
+        <img class="cities" src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg" alt="">
+        <img class="cities" src="https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg" alt="">
+        <img class="cities" src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg" alt="">
+        <p><a href="#">View more >>></a></p>
     </div>
     <footer>
         <div>
-            <span>Footer Div</span>
+           <p><a href="contact.html" target="_blank">Contact Us</a></p>
+           <p>
+            <a href="https://www.facebook.com" target="_blank"><img class="socialmedia" src="assests/images/facebook.png" alt="facebook"></a>
+            <a href="https://www.instagram.com" target="_blank"><img class="socialmedia" src="assests/images/instagram.png" alt="instagram"></a>
+            <a href="https://twitter.com" target="_blank"><img class="socialmedia" src="assests/images/twitter.png" alt="twitter"></a>
+           </p>
+           <p>© 2020 ROOM SEARCH PVT LTD</p>
         </div>
     </footer>
     </div>
