--- a/list.html
+++ b/list.html
@@ -11,16 +11,61 @@
     <header>
         <div>
             <img src="assests/images/logo.png" alt="logo">
+            <span>
+                <a href="login.html" target="_blank">Login</a>
+            </span>
         </div>
-        <span>Header Div</span>
     </header>
     <div>
-        <span>Content Div</span>
+        <ul>
+            <li><a href="#">List View</a></li>
+            <li><a href="#">Map View</a></li>
+        </ul>
+    <a href="detail.html"><div>
+            <img class="hotel" src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="">
+        </div>
+        <div>
+            <h3><u>Radisson Blu Hotel</u></h3>
+            <p><u>5 Star</u></p>
+            <p><u>New Delhi</u></p>
+        </div>
+    </a>    
+        <div>
+            <img class="hotel" src="https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg" alt="">
+        </div>
+        <div>
+            <h3><u>The Lalit New Delhi</u></h3>
+            <p><u>4.5 Star</u></p>
+            <p><u>New Delhi</u></p>
+        </div>
+
+        <div>
+            <img class="hotel" src="https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg" alt="">
+        </div>
+        <div>
+            <h3><u>Taj Palace</u></h3>
+            <p><u>4.0 Star</u></p>
+            <p><u>New Delhi</u></p>
+        </div>
+
+        <div>
+            <img class="map" src="https://cdn.pixabay.com/photo/2018/01/31/05/43/web-3120321_960_720.png" alt="">
+        </div>
+        <div>
+            <p>MAP VIEW</p>
+        </div>
+
     </div>
     <footer>
         <div>
-            <span>Footer Div</span>
-        </div>
+            <p><a href="contact.html" target="_blank">Contact Us</a></p>
+            <p>
+             <a href="https://www.facebook.com" target="_blank"><img class="socialmedia" src="assests/images/facebook.png" alt="facebook"></a>
+             <a href="https://www.instagram.com" target="_blank"><img class="socialmedia" src="assests/images/instagram.png" alt="instagram"></a>
+             <a href="https://twitter.com" target="_blank"><img class="socialmedia" src="assests/images/twitter.png" alt="twitter"></a>
+            </p>
+            <p>© 2020 ROOM SEARCH PVT LTD</p>
+         </div>
     </footer>
     </div>
 </body>
