--- a/detail.html
+++ b/detail.html
@@ -11,16 +11,38 @@
     <header>
         <div>
             <img src="assests/images/logo.png" alt="logo">
+            <span>
+                <a href="login.html" target="_blank">Login</a>
+            </span>
         </div>
-        <span>Header Div</span>
     </header>
     <div>
-        <span>Content Div</span>
+        <img class="hotel" src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="">
+        <p><a href="payment.html">Book Now</a></p>
+        <h2>Radisson Blu Hotel</h2>
+        <p>RATING</p>
+        <p>5 Star</p>
+        <p>AMENITIES</p>
+        <ul>
+            <li>Room service</li>
+            <li>Restaurant</li>
+            <li>Business center</li>
+            <li>Fitness center</li>
+            <li>Pool</li>
+        </ul>
+        <h5>DESCRIPTION</h5>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam consequatur, maxime iusto unde corrupti facilis fugit odio architecto repellat! Neque temporibus tenetur autem odio veritatis repellendus ut veniam quae fugit, reprehenderit perspiciatis?</p>
     </div>
     <footer>
         <div>
-            <span>Footer Div</span>
-        </div>
+            <p><a href="contact.html" target="_blank">Contact Us</a></p>
+            <p>
+             <a href="https://www.facebook.com" target="_blank"><img class="socialmedia" src="assests/images/facebook.png" alt="facebook"></a>
+             <a href="https://www.instagram.com" target="_blank"><img class="socialmedia" src="assests/images/instagram.png" alt="instagram"></a>
+             <a href="https://twitter.com" target="_blank"><img class="socialmedia" src="assests/images/twitter.png" alt="twitter"></a>
+            </p>
+            <p>© 2020 ROOM SEARCH PVT LTD</p>
+         </div>
     </footer>
     </div>
 </body>
