--- a/payment.html
+++ b/payment.html
@@ -10,17 +10,54 @@
     <div>
     <header>
         <div>
-            <img src="assests/images/logo.png" alt="logo">
-        </div>
-        <span>Header Div</span>
+            <div>
+                <img src="assests/images/logo.png" alt="logo">
+                <span>
+                    <a href="login.html" target="_blank">Login</a>
+                </span>
+            </div>
     </header>
     <div>
-        <span>Content Div</span>
+        <div>
+        <img class="hotel" src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="">
+        <h2>Radisson Blu Hotel</h2>
+        <p>#38 of 1,289 hotels in New Delhi</p>
+        <p>National Highway 8, New Delhi 110017 India</p>
+    </div>
+    <div>
+        <p>
+            <b>Name:</b> John Doe
+        </p>
+        <p>
+            <b>Number of Adults:</b> 2
+        </p>
+        <p>
+            <b>Check-in Date:</b> 06/06/2020
+        </p>
+        <p>
+            <b>Check-out Date:</b> 08/06/2020
+        </p>
+    </div>
+    <div>
+        <p>
+            <b>Tarrif Breakdown:</b> Rs. 1000 x 2 Adults x 5 Nights
+        </p>
+        <p>
+            <b>Total Amount:</b> Rs. 10,000
+        </p>
+    </div>
+    <span><a href="#">Pay Now</a></span>
     </div>
     <footer>
         <div>
-            <span>Footer Div</span>
-        </div>
+            <p><a href="contact.html" target="_blank">Contact Us</a></p>
+            <p>
+             <a href="https://www.facebook.com" target="_blank"><img class="socialmedia" src="assests/images/facebook.png" alt="facebook"></a>
+             <a href="https://www.instagram.com" target="_blank"><img class="socialmedia" src="assests/images/instagram.png" alt="instagram"></a>
+             <a href="https://twitter.com" target="_blank"><img class="socialmedia" src="assests/images/twitter.png" alt="twitter"></a>
+            </p>
+            <p>© 2020 ROOM SEARCH PVT LTD</p>
+         </div>
     </footer>
     </div>
 </body>
