--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         <div>
             <img src="assests/images/logo.png" alt="logo">
             <span>
-                <a href="login.html" target="_blank">Login</a>
+                <a href="login.html">Login</a>
             </span>
         </div>
     </header>
     <div>
-        <span>Search Bar</span><br>
+        <span><input type="text" name="city" id="city" placeholder="City"></span><br>
         <a href="list.html"><img class="cities" src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" alt=""></a>
         <img class="cities" src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg" alt="">
         <img class="cities" src="https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg" alt="">
@@ -27,7 +27,7 @@
     </div>
     <footer>
         <div>
-           <p><a href="contact.html" target="_blank">Contact Us</a></p>
+           <p><a href="contact.html">Contact Us</a></p>
            <p>
             <a href="https://www.facebook.com" target="_blank"><img class="socialmedia" src="assests/images/facebook.png" alt="facebook"></a>
             <a href="https://www.instagram.com" target="_blank"><img class="socialmedia" src="assests/images/instagram.png" alt="instagram"></a>
