--- a/list.html
+++ b/list.html
@@ -10,9 +10,9 @@
     <div>
     <header>
         <div>
-            <img src="assests/images/logo.png" alt="logo">
+            <a href="index.html"><img src="assests/images/logo.png" alt="logo"></a>
             <span>
-                <a href="login.html" target="_blank">Login</a>
+                <a href="login.html">Login</a>
             </span>
         </div>
     </header>
@@ -58,7 +58,7 @@
     </div>
     <footer>
         <div>
-            <p><a href="contact.html" target="_blank">Contact Us</a></p>
+            <p><a href="contact.html">Contact Us</a></p>
             <p>
              <a href="https://www.facebook.com" target="_blank"><img class="socialmedia" src="assests/images/facebook.png" alt="facebook"></a>
              <a href="https://www.instagram.com" target="_blank"><img class="socialmedia" src="assests/images/instagram.png" alt="instagram"></a>
