--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,12 @@
 </head>
 <body>
     <div>
-        <p>CONTACT US</p>
+        <p>Thank you for reaching out!!!</p>
+        <p>Please enter your email and we will get back to you.</p>
+        <form action="index.html">
+            <input type="email" name="email" placeholder="Enter your email" required><br>
+            <button type="submit">Submit</button>
+        </form>
     </div>
 </body>
 </html>
