--- a/detail.html
+++ b/detail.html
@@ -10,15 +10,28 @@
     <div>
     <header>
         <div>
-            <img src="assests/images/logo.png" alt="logo">
+            <a href="index.html"><img src="assests/images/logo.png" alt="logo"></a>
             <span>
-                <a href="login.html" target="_blank">Login</a>
+                <a href="login.html">Login</a>
             </span>
         </div>
     </header>
     <div>
         <img class="hotel" src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="">
-        <p><a href="payment.html">Book Now</a></p>
+        
+        <form action="payment.html" method="get">
+            <label for="adults">Adults:</label>
+            <input type="number" min="1" name="adults" id="adults"><br>
+            <label for="name">Name:</label>
+            <input type="text" name="name" id="name" required><br>
+            <label for="fromdate">From Date:</label>
+            <input type="date" name="fromdate" id="fromdate" required><br>
+            <label for="todate">To Date:</label>
+            <input type="date" name="todate" id="todate" required><br>
+            <label for="total">Total:</label>
+            <input readonly="readonly" name="total" id="total"><br>
+            <button type="submit">Book Now</button>
+        </form>
         <h2>Radisson Blu Hotel</h2>
         <p>RATING</p>
         <p>5 Star</p>
@@ -35,7 +48,7 @@
     </div>
     <footer>
         <div>
-            <p><a href="contact.html" target="_blank">Contact Us</a></p>
+            <p><a href="contact.html">Contact Us</a></p>
             <p>
              <a href="https://www.facebook.com" target="_blank"><img class="socialmedia" src="assests/images/facebook.png" alt="facebook"></a>
              <a href="https://www.instagram.com" target="_blank"><img class="socialmedia" src="assests/images/instagram.png" alt="instagram"></a>
