--- a/login.html
+++ b/login.html
@@ -8,7 +8,14 @@
 </head>
 <body>
     <div>
-        <p>LOGIN</p>
+        
+        <form action="index.html" method="get">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" placeholder="Enter Usrename" required><br>
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" placeholder="Enter Password" required><br>
+            <button type="submit">Login</button>
+        </form>
     </div>
 </body>
 </html>
