--- a/payment.html
+++ b/payment.html
@@ -11,9 +11,9 @@
     <header>
         <div>
             <div>
-                <img src="assests/images/logo.png" alt="logo">
+                <a href="index.html"><img src="assests/images/logo.png" alt="logo"></a>
                 <span>
-                    <a href="login.html" target="_blank">Login</a>
+                    <a href="login.html">Login</a>
                 </span>
             </div>
     </header>
@@ -50,7 +50,7 @@
     </div>
     <footer>
         <div>
-            <p><a href="contact.html" target="_blank">Contact Us</a></p>
+            <p><a href="contact.html">Contact Us</a></p>
             <p>
              <a href="https://www.facebook.com" target="_blank"><img class="socialmedia" src="assests/images/facebook.png" alt="facebook"></a>
              <a href="https://www.instagram.com" target="_blank"><img class="socialmedia" src="assests/images/instagram.png" alt="instagram"></a>
