--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
+    <div class="container">
     <div>
     <header>
         <div>
-            <img src="assests/images/logo.png" alt="logo">
+            <img src="assests/images/logo.png" alt="logo" id="logo">
             <span>
                 <a href="login.html">Login</a>
             </span>
@@ -22,20 +23,21 @@
         <a href="list.html"><img class="cities" src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" alt=""></a>
         <img class="cities" src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg" alt="">
         <img class="cities" src="https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg" alt="">
-        <img class="cities" src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg" alt="">
-        <p><a href="#">View more >>></a></p>
+        <img class="cities" src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg" alt=""><br>
+        <span><a href="#">View more >>></a></span>
     </div>
     <footer>
-        <div>
-           <p><a href="contact.html">Contact Us</a></p>
-           <p>
+    
+           <span><a href="contact.html">Contact Us</a></span><br>
+           <span>
             <a href="https://www.facebook.com" target="_blank"><img class="socialmedia" src="assests/images/facebook.png" alt="facebook"></a>
             <a href="https://www.instagram.com" target="_blank"><img class="socialmedia" src="assests/images/instagram.png" alt="instagram"></a>
             <a href="https://twitter.com" target="_blank"><img class="socialmedia" src="assests/images/twitter.png" alt="twitter"></a>
-           </p>
-           <p>© 2020 ROOM SEARCH PVT LTD</p>
-        </div>
+           </span><br>
+           <span>© 2020 ROOM SEARCH PVT LTD</span>
+        
     </footer>
     </div>
+</div>
 </body>
 </html>
