--- a/detail.html
+++ b/detail.html
@@ -7,17 +7,18 @@
     <title>Detail</title>
     <link rel="stylesheet" href="styles/detail.css">
 <body>
+    <div class="container">
     <div>
     <header>
         <div>
-            <a href="index.html"><img src="assests/images/logo.png" alt="logo"></a>
+            <a href="index.html"><img src="assests/images/logo.png" alt="logo"id="logof"></a>
             <span>
                 <a href="login.html">Login</a>
             </span>
         </div>
     </header>
     <div>
-        <img class="hotel" src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="">
+        <img class="hotel" src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="" >
         
         <form action="payment.html" method="get">
             <label for="adults">Adults:</label>
@@ -47,15 +48,13 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam consequatur, maxime iusto unde corrupti facilis fugit odio architecto repellat! Neque temporibus tenetur autem odio veritatis repellendus ut veniam quae fugit, reprehenderit perspiciatis?</p>
     </div>
     <footer>
-        <div>
-            <p><a href="contact.html">Contact Us</a></p>
-            <p>
-             <a href="https://www.facebook.com" target="_blank"><img class="socialmedia" src="assests/images/facebook.png" alt="facebook"></a>
-             <a href="https://www.instagram.com" target="_blank"><img class="socialmedia" src="assests/images/instagram.png" alt="instagram"></a>
-             <a href="https://twitter.com" target="_blank"><img class="socialmedia" src="assests/images/twitter.png" alt="twitter"></a>
-            </p>
-            <p>© 2020 ROOM SEARCH PVT LTD</p>
-         </div>
+        <span><a href="contact.html">Contact Us</a></span><br>
+        <span>
+         <a href="https://www.facebook.com" target="_blank"><img class="socialmedia" src="assests/images/facebook.png" alt="facebook"></a>
+         <a href="https://www.instagram.com" target="_blank"><img class="socialmedia" src="assests/images/instagram.png" alt="instagram"></a>
+         <a href="https://twitter.com" target="_blank"><img class="socialmedia" src="assests/images/twitter.png" alt="twitter"></a>
+        </span><br>
+        <span>© 2020 ROOM SEARCH PVT LTD</span>
     </footer>
     </div>
 </body>
