--- a/payment.html
+++ b/payment.html
@@ -7,11 +7,12 @@
     <title>Payment</title>
     <link rel="stylesheet" href="styles/payment.css">
 <body>
+    <div class="container">
     <div>
     <header>
         <div>
             <div>
-                <a href="index.html"><img src="assests/images/logo.png" alt="logo"></a>
+                <a href="index.html"><img src="assests/images/logo.png" alt="logo" id="logo"></a>
                 <span>
                     <a href="login.html">Login</a>
                 </span>
@@ -47,17 +48,15 @@
         </p>
     </div>
     <span><a href="#">Pay Now</a></span>
-    </div>
+    
     <footer>
-        <div>
-            <p><a href="contact.html">Contact Us</a></p>
-            <p>
-             <a href="https://www.facebook.com" target="_blank"><img class="socialmedia" src="assests/images/facebook.png" alt="facebook"></a>
-             <a href="https://www.instagram.com" target="_blank"><img class="socialmedia" src="assests/images/instagram.png" alt="instagram"></a>
-             <a href="https://twitter.com" target="_blank"><img class="socialmedia" src="assests/images/twitter.png" alt="twitter"></a>
-            </p>
-            <p>© 2020 ROOM SEARCH PVT LTD</p>
-         </div>
+        <span><a href="contact.html">Contact Us</a></span><br>
+        <span>
+         <a href="https://www.facebook.com" target="_blank"><img class="socialmedia" src="assests/images/facebook.png" alt="facebook"></a>
+         <a href="https://www.instagram.com" target="_blank"><img class="socialmedia" src="assests/images/instagram.png" alt="instagram"></a>
+         <a href="https://twitter.com" target="_blank"><img class="socialmedia" src="assests/images/twitter.png" alt="twitter"></a>
+        </span><br>
+        <span>© 2020 ROOM SEARCH PVT LTD</span>
     </footer>
     </div>
 </body>
