--- a/detail.html
+++ b/detail.html
@@ -11,7 +11,7 @@
     <div>
     <header>
         <div>
-            <a href="index.html"><img src="assests/images/logo.png" alt="logo"id="logof"></a>
+            <a href="index.html"><img src="assests/images/logo.png" alt="logo"id="logo"></a>
             <span>
                 <a href="login.html">Login</a>
             </span>
@@ -33,6 +33,7 @@
             <input readonly="readonly" name="total" id="total"><br>
             <button type="submit">Book Now</button>
         </form>
+        <div id="details">
         <h2>Radisson Blu Hotel</h2>
         <p>RATING</p>
         <p>5 Star</p>
@@ -44,9 +45,11 @@
             <li>Fitness center</li>
             <li>Pool</li>
         </ul>
+        
         <h5>DESCRIPTION</h5>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam consequatur, maxime iusto unde corrupti facilis fugit odio architecto repellat! Neque temporibus tenetur autem odio veritatis repellendus ut veniam quae fugit, reprehenderit perspiciatis?</p>
     </div>
+</div>
     <footer>
         <span><a href="contact.html">Contact Us</a></span><br>
         <span>
