--- a/index.html
+++ b/index.html
@@ -19,12 +19,18 @@
         </div>
     </header>
     <div>
-        <span><input type="text" name="city" id="city" placeholder="City"></span><br>
+        <div id="searchbox"><input type="text" name="city" 
+        id="city" placeholder="City"></div><br>
+<div>
+    <div id="cityimg">
         <a href="list.html"><img class="cities" src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" alt=""></a>
         <img class="cities" src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg" alt="">
         <img class="cities" src="https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg" alt="">
-        <img class="cities" src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg" alt=""><br>
+        <img class="cities" src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg" alt="">
+    </div>
+</div>
         <span><a href="#">View more >>></a></span>
+    
     </div>
     <footer>
     
