--- a/list.html
+++ b/list.html
@@ -22,8 +22,10 @@
             <li><a href="#list-view">List View</a></li>
             <li><a href="#map-view">Map View</a></li>
         </ul>
-        <div id="list-view">
-    <a href="detail.html"><div>
+        <div id="list-view" class="htl">
+           
+    <a href="detail.html">
+        <div>
             <img class="hotel" src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="">
         </div>
         <div>
@@ -31,7 +33,9 @@
             <p><u>5 Star</u></p>
             <p><u>New Delhi</u></p>
         </div>
-    </a>    
+    </a>  
+</div> 
+<div class="htl">
         <div>
             <img class="hotel" src="https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg" alt="">
         </div>
@@ -40,7 +44,8 @@
             <p><u>4.5 Star</u></p>
             <p><u>New Delhi</u></p>
         </div>
-
+</div>
+<div class="htl">
         <div>
             <img class="hotel" src="https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg" alt="">
         </div>
