--- a/loader.html
+++ b/loader.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loader</title>
+    <link rel="stylesheet" href="styles/loader.css">
 </head>
 <body>
-    <div>
-        <p>LOADER</p>
+    <div class="container">
+        <div id="loadersign"></div>
+        <!-- <p>LOADER</p> -->
     </div>
-    
 </body>
 </html>
