--- a/payment.html
+++ b/payment.html
@@ -19,13 +19,14 @@
             </div>
     </header>
     <div>
-        <div>
+        <div id="hoteldetail">
         <img class="hotel" src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="">
         <h2>Radisson Blu Hotel</h2>
         <p>#38 of 1,289 hotels in New Delhi</p>
         <p>National Highway 8, New Delhi 110017 India</p>
+        </div>
     </div>
-    <div>
+    <div id="customerdetail">
         <p>
             <b>Name:</b> John Doe
         </p>
@@ -39,7 +40,7 @@
             <b>Check-out Date:</b> 08/06/2020
         </p>
     </div>
-    <div>
+    <div id="tarrif">
         <p>
             <b>Tarrif Breakdown:</b> Rs. 1000 x 2 Adults x 5 Nights
         </p>
