--- a/list.html
+++ b/list.html
@@ -6,56 +6,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>List</title>
     <link rel="stylesheet" href="styles/list.css">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 <body>
-    <div class="container">
-    <div>
     <header>
         <div>
-            <a href="index.html"><img src="assests/images/logo.png" alt="logo" id="logo"></a>
-            <span>
-                <a href="login.html">Login</a>
-            </span>
-        </div>
+            <a href="index.html"> <img src="assests/images/logo.png" alt="logo" id="logo"> </a>
+        </div>    
+        <div id="login">
+            <a href="login.html" class="normallink">Login</a>
+        </div>  
     </header>
-    <div>
-        <ul>
-            <li><a href="#list-view">List View</a></li>
-            <li><a href="#map-view">Map View</a></li>
+
+<div class="content"style="margin:2% ">
+    <div style="margin-top: 5%;">
+        <ul id="views" style="display:flex; justify-content:center;">
+            <li class="list-views"><a href="#list-view" class="view-link">List View</a></li>
+            <li class="list-views"><a href="#map-view" class="view-link">Map View</a></li>
         </ul>
-        <div id="list-view" class="htl">
-           
-    <a href="detail.html">
-        <div>
-            <img class="hotel" src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="">
-        </div>
-        <div>
-            <h3><u>Radisson Blu Hotel</u></h3>
-            <p><u>5 Star</u></p>
-            <p><u>New Delhi</u></p>
-        </div>
-    </a>  
-</div> 
-<div class="htl">
+    </div> 
+    <div class="hotellist">
+    <div id="list-view" class="htl">    
+        <a href="detail.html" class="no-underline">
+            <div>
+                <img class="hotel" src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="">
+            </div>
+            <div class="no-underline">
+                <h3>Radisson Blu Hotel</h3>
+                <p>5 Star</p>
+                <p>New Delhi</p>
+            </div>
+        </a>  
+    </div> 
+
+    <div class="htl">
         <div>
             <img class="hotel" src="https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg" alt="">
         </div>
-        <div>
-            <h3><u>The Lalit New Delhi</u></h3>
-            <p><u>4.5 Star</u></p>
-            <p><u>New Delhi</u></p>
+        <div class="no-underline">
+            <h3>The Lalit New Delhi</h3>
+            <p>4.5 Star</p>
+            <p>New Delhi</p>
         </div>
-</div>
-<div class="htl">
+    </div>
+
+    <div class="htl">
         <div>
             <img class="hotel" src="https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg" alt="">
         </div>
-        <div>
-            <h3><u>Taj Palace</u></h3>
-            <p><u>4.0 Star</u></p>
-            <p><u>New Delhi</u></p>
+        <div class="no-underline">
+            <h3>Taj Palace</h3>
+            <p>4.0 Star</p>
+            <p>New Delhi</p>
         </div>
     </div>
-    <div id="map-view">
+
+    <div id="map-view" style="display:none;">
         <div >
             <img class="map" src="https://cdn.pixabay.com/photo/2018/01/31/05/43/web-3120321_960_720.png" alt="">
         </div>
@@ -63,18 +68,18 @@
             <p>MAP VIEW</p>
         </div>
     </div>
-    <div>
-    <footer>
-        <span><a href="contact.html">Contact Us</a></span><br>
-        <span>
-         <a href="https://www.facebook.com" target="_blank"><img class="socialmedia" src="assests/images/facebook.png" alt="facebook"></a>
-         <a href="https://www.instagram.com" target="_blank"><img class="socialmedia" src="assests/images/instagram.png" alt="instagram"></a>
-         <a href="https://twitter.com" target="_blank"><img class="socialmedia" src="assests/images/twitter.png" alt="twitter"></a>
-        </span><br>
-        <span>© 2020 ROOM SEARCH PVT LTD</span>
-     
-    </footer>
     </div>
-</div>
+
+
+    <footer>   
+        <div style="margin-left:2%;"><a href="contact.html" class="normallink">Contact Us</a></div>
+        <div id="pvtltd">© 2020 ROOM SEARCH PVT LTD</div>
+        <div id="social">
+            <a href="https://www.facebook.com" target="_blank"><img class="socialmedia" src="assests/images/facebook.png" alt="facebook"></a>
+            <a href="https://www.instagram.com" target="_blank"><img class="socialmedia" src="assests/images/instagram.png" alt="instagram"></a>
+            <a href="https://twitter.com" target="_blank"><img class="socialmedia" src="assests/images/twitter.png" alt="twitter"></a>
+        </div>       
+    </footer>
+
 </body>
 </html>
