--- a/payment.html
+++ b/payment.html
@@ -6,59 +6,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payment</title>
     <link rel="stylesheet" href="styles/payment.css">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+
 <body>
     <div class="container">
-    <div>
-    <header>
-        <div>
-            <div>
-                <a href="index.html"><img src="assests/images/logo.png" alt="logo" id="logo"></a>
-                <span>
-                    <a href="login.html">Login</a>
-                </span>
-            </div>
-    </header>
-    <div>
-        <div id="hoteldetail">
-        <img class="hotel" src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="">
-        <h2>Radisson Blu Hotel</h2>
-        <p>#38 of 1,289 hotels in New Delhi</p>
-        <p>National Highway 8, New Delhi 110017 India</p>
-        </div>
-    </div>
-    <div id="customerdetail">
-        <p>
-            <b>Name:</b> John Doe
-        </p>
-        <p>
-            <b>Number of Adults:</b> 2
-        </p>
-        <p>
-            <b>Check-in Date:</b> 06/06/2020
-        </p>
-        <p>
-            <b>Check-out Date:</b> 08/06/2020
-        </p>
-    </div>
-    <div id="tarrif">
-        <p>
-            <b>Tarrif Breakdown:</b> Rs. 1000 x 2 Adults x 5 Nights
-        </p>
-        <p>
-            <b>Total Amount:</b> Rs. 10,000
-        </p>
-    </div>
-    <span><a href="#">Pay Now</a></span>
     
-    <footer>
-        <span><a href="contact.html">Contact Us</a></span><br>
-        <span>
-         <a href="https://www.facebook.com" target="_blank"><img class="socialmedia" src="assests/images/facebook.png" alt="facebook"></a>
-         <a href="https://www.instagram.com" target="_blank"><img class="socialmedia" src="assests/images/instagram.png" alt="instagram"></a>
-         <a href="https://twitter.com" target="_blank"><img class="socialmedia" src="assests/images/twitter.png" alt="twitter"></a>
-        </span><br>
-        <span>© 2020 ROOM SEARCH PVT LTD</span>
+        <header>
+            <div>
+                <a href="index.html"> <img src="assests/images/logo.png" alt="logo" id="logo"> </a>
+            </div>    
+            <div id="login">
+                <a href="login.html" class="normallink">Login</a>
+            </div>  
+        </header>
+
+    <div class="content">
+        <div id="hoteldetail">
+            <img class="hotel" src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="">
+            <h2>Radisson Blu Hotel</h2>
+            <p>#38 of 1,289 hotels in New Delhi</p>
+            <p>National Highway 8, New Delhi 110017 India</p>
+        </div>
+
+        <div id="customerdetail">
+            <p>
+                <b>Name:</b> John Doe
+            </p>
+            <p>
+                <b>Number of Adults:</b> 2
+            </p>
+            <p>
+                <b>Check-in Date:</b> 06/06/2020
+            </p>
+            <p>
+                <b>Check-out Date:</b> 08/06/2020
+            </p>
+        </div>
+
+        <div id="tarrif">
+            <p>
+                <b>Tarrif Breakdown:</b> Rs. 1000 x 2 Adults x 5 Nights
+            </p>
+            <p>
+                <b>Total Amount:</b> Rs. 10,000
+            </p>
+        </div>
+
+        <div id="paynow-link"><a href="#" class="normal-link">Pay Now</a></div>
+    </div>
+
+    <footer>   
+        <div style="margin-left:2%;"><a href="contact.html" class="normallink">Contact Us</a></div>
+        <div id="pvtltd">© 2020 ROOM SEARCH PVT LTD</div>
+        <div id="social">
+            <a href="https://www.facebook.com" target="_blank"><img class="socialmedia" src="assests/images/facebook.png" alt="facebook"></a>
+            <a href="https://www.instagram.com" target="_blank"><img class="socialmedia" src="assests/images/instagram.png" alt="instagram"></a>
+            <a href="https://twitter.com" target="_blank"><img class="socialmedia" src="assests/images/twitter.png" alt="twitter"></a>
+        </div>       
     </footer>
+
     </div>
 </body>
 </html>
