--- a/list.html
+++ b/list.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 <body>
     <header>
-        <div>
+        <div id="logo-div">
             <a href="index.html"> <img src="assests/images/logo.png" alt="logo" id="logo"> </a>
         </div>    
         <div id="login">
@@ -17,7 +17,7 @@
         </div>  
     </header>
 
-<div class="content"style="margin:2% ">
+<div class="content" >
     <div style="margin-top: 5%;">
         <ul id="views" style="display:flex; justify-content:center;">
             <li class="list-views"><a href="#list-view" class="view-link">List View</a></li>
@@ -26,11 +26,11 @@
     </div> 
     <div class="hotellist">
     <div id="list-view" class="htl">    
-        <a href="detail.html" class="no-underline">
+        <a href="detail.html" class="no-underline" style="display: flex; width:100%;">
             <div>
                 <img class="hotel" src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="">
             </div>
-            <div class="no-underline">
+            <div class="no-underline hotel-detail">
                 <h3>Radisson Blu Hotel</h3>
                 <p>5 Star</p>
                 <p>New Delhi</p>
@@ -42,18 +42,18 @@
         <div>
             <img class="hotel" src="https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg" alt="">
         </div>
-        <div class="no-underline">
+        <div class="no-underline hotel-detail">
             <h3>The Lalit New Delhi</h3>
             <p>4.5 Star</p>
             <p>New Delhi</p>
         </div>
     </div>
 
-    <div class="htl">
+    <div class="htl" >
         <div>
             <img class="hotel" src="https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg" alt="">
         </div>
-        <div class="no-underline">
+        <div class="no-underline hotel-detail">
             <h3>Taj Palace</h3>
             <p>4.0 Star</p>
             <p>New Delhi</p>
