--- a/payment.html
+++ b/payment.html
@@ -12,7 +12,7 @@
     <div class="container">
     
         <header>
-            <div>
+            <div id="logo-div">
                 <a href="index.html"> <img src="assests/images/logo.png" alt="logo" id="logo"> </a>
             </div>    
             <div id="login">
@@ -21,38 +21,44 @@
         </header>
 
     <div class="content">
-        <div id="hoteldetail">
-            <img class="hotel" src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="">
-            <h2>Radisson Blu Hotel</h2>
-            <p>#38 of 1,289 hotels in New Delhi</p>
-            <p>National Highway 8, New Delhi 110017 India</p>
+        <div id="hoteldetail" style="display:flex; ">
+            <div>
+                <img class="hotel" src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="" style="max-height:200px; max-width:270px;">
+            </div>
+            <div id="hotel-info">
+                <h2>Radisson Blu Hotel</h2>
+                <p>#38 of 1,289 hotels in New Delhi</p>
+                <p>National Highway 8, New Delhi 110017 India</p>
+            </div>
         </div>
+        
+        <div id="lower-box">
+            <div id="customerdetail">
+                <p>
+                    <b class="font-cursive">Name:</b> John Doe
+                </p>
+                <p>
+                    <b class="font-cursive">Number of Adults:</b> 2
+                </p>
+                <p>
+                    <b class="font-cursive">Check-in Date:</b> 06/06/2020
+                </p>
+                <p>
+                    <b class="font-cursive">Check-out Date:</b> 08/06/2020
+                </p>
+            </div>
 
-        <div id="customerdetail">
-            <p>
-                <b>Name:</b> John Doe
-            </p>
-            <p>
-                <b>Number of Adults:</b> 2
-            </p>
-            <p>
-                <b>Check-in Date:</b> 06/06/2020
-            </p>
-            <p>
-                <b>Check-out Date:</b> 08/06/2020
-            </p>
+            <div id="tarrif">
+                <p>
+                    <b class="font-cursive">Tarrif Breakdown:</b> Rs. 1000 x 2 Adults x 5 Nights
+                </p>
+                <p>
+                    <b class="font-cursive">Total Amount:</b> Rs. 10,000
+                </p>
+            </div>
+
+            <div id="paynow-link"><a href="#" class="normal-link">Pay Now</a></div>
         </div>
-
-        <div id="tarrif">
-            <p>
-                <b>Tarrif Breakdown:</b> Rs. 1000 x 2 Adults x 5 Nights
-            </p>
-            <p>
-                <b>Total Amount:</b> Rs. 10,000
-            </p>
-        </div>
-
-        <div id="paynow-link"><a href="#" class="normal-link">Pay Now</a></div>
     </div>
 
     <footer>   
