--- a/loader.html
+++ b/loader.html
@@ -8,9 +8,7 @@
     <link rel="stylesheet" href="styles/loader.css">
 </head>
 <body>
-    <div class="container">
-        <div id="loadersign"></div>
-        <!-- <p>LOADER</p> -->
+    <div id="loader">
     </div>
 </body>
 </html>
