--- a/list.html
+++ b/list.html
@@ -1,85 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>List</title>
-    <link rel="stylesheet" href="styles/list.css">
+
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="styles/list.css">
+
 <body>
     <header>
         <div id="logo-div">
             <a href="index.html"> <img src="assests/images/logo.png" alt="logo" id="logo"> </a>
-        </div>    
+        </div>
         <div id="login">
-            <a href="login.html" class="normallink">Login</a>
-        </div>  
+            <button type="button" class="btn btn-light btn-sm" data-toggle="modal"
+                data-target="#exampleModal">LOGIN</button>
+
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Please Login</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <form action="">
+
+                                <label for="username" class="modal-form">Username:</label>
+                                <input type="text" name="username" id="username" placeholder="Enter Username"
+                                    required><br>
+
+                                <label for="password" class="modal-form">Password:</label>
+                                <input type="password" name="password" id="password" placeholder="Enter Password"
+                                    required>
+
+                            </form>
+                        </div>
+                        <div class="modal-footer" style="justify-content: center;">
+                            <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
+                            <button type="button" class="btn btn-primary">Login</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
 
-<div class="content" >
-    <div style="margin-top: 5%;">
-        <ul id="views" style="display:flex; justify-content:center;">
-            <li class="list-views"><a href="#list-view" class="view-link">List View</a></li>
-            <li class="list-views"><a href="#map-view" class="view-link">Map View</a></li>
-        </ul>
-    </div> 
-    <div class="hotellist">
-    <div id="list-view" class="htl">    
-        <a href="detail.html" class="no-underline" style="display: flex; width:100%;">
-            <div>
-                <img class="hotel" src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="">
+    <div class="content">
+        <div style="margin-top: 5%;">
+            <ul id="views" class="nav nav-pills" style="display:flex; justify-content:center;">
+                <li class="list-views"><a href="#list-view" class="view-link nav-link active" data-toggle="pill"
+                        data-target="#list-view">List
+                        View</a></li>
+                <li class="list-views"><a href="#map-view" class="view-link nav-link" data-toggle="pill"
+                        data-target="#map-view">Map
+                        View</a></li>
+            </ul>
+        </div>
+        <div class="tab-content">
+            <div class="hotellist tab-pane fade show active" id="list-view">
+                <div class="htl">
+                    <a href="detail.html" class="no-underline" style="display: flex; width:100%; text-decoration:none;">
+                        <div>
+                            <img class="hotel"
+                                src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg"
+                                alt="">
+                        </div>
+                        <div class="no-underline hotel-detail">
+                            <h3>Radisson Blu Hotel</h3>
+                            <p>5 Star</p>
+                            <p>New Delhi</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="htl">
+                    <div>
+                        <img class="hotel" src="https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg"
+                            alt="">
+                    </div>
+                    <div class="no-underline hotel-detail">
+                        <h3>The Lalit New Delhi</h3>
+                        <p>4.5 Star</p>
+                        <p>New Delhi</p>
+                    </div>
+                </div>
+
+                <div class="htl">
+                    <div>
+                        <img class="hotel"
+                            src="https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg" alt="">
+                    </div>
+                    <div class="no-underline hotel-detail">
+                        <h3>Taj Palace</h3>
+                        <p>4.0 Star</p>
+                        <p>New Delhi</p>
+                    </div>
+                </div>
             </div>
-            <div class="no-underline hotel-detail">
-                <h3>Radisson Blu Hotel</h3>
-                <p>5 Star</p>
-                <p>New Delhi</p>
+
+            <div id="map-view" class="tab-pane fade">
+                <div>
+                    <img class="map" src="https://cdn.pixabay.com/photo/2018/01/31/05/43/web-3120321_960_720.png"
+                        alt="">
+                </div>
             </div>
-        </a>  
-    </div> 
+        </div>
 
-    <div class="htl">
-        <div>
-            <img class="hotel" src="https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg" alt="">
-        </div>
-        <div class="no-underline hotel-detail">
-            <h3>The Lalit New Delhi</h3>
-            <p>4.5 Star</p>
-            <p>New Delhi</p>
-        </div>
-    </div>
+        <footer>
+            <div style="margin-left:2%;">
+                <button type="button" class="btn btn-info btn-sm" data-toggle="modal"
+                    data-target="#exampleModal1">Contact Us</button>
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Get in touch</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                Thank you for reaching out!!!<br>
+                                Please enter your email and we will get back to you.<br>
+                                <label for="email">Email:</label>
+                                <input type="email" placeholder="Enter your email id" required>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-primary">Submit</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Modal Ends -->
+            </div>
+            <div id="pvtltd">© 2020 ROOM SEARCH PVT LTD</div>
+            <div id="social">
+                <a href="https://www.facebook.com" target="_blank"><img class="socialmedia"
+                        src="assests/images/facebook.png" alt="facebook"></a>
+                <a href="https://www.instagram.com" target="_blank"><img class="socialmedia"
+                        src="assests/images/instagram.png" alt="instagram"></a>
+                <a href="https://twitter.com" target="_blank"><img class="socialmedia" src="assests/images/twitter.png"
+                        alt="twitter"></a>
+            </div>
 
-    <div class="htl" >
-        <div>
-            <img class="hotel" src="https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg" alt="">
-        </div>
-        <div class="no-underline hotel-detail">
-            <h3>Taj Palace</h3>
-            <p>4.0 Star</p>
-            <p>New Delhi</p>
-        </div>
-    </div>
-
-    <div id="map-view" style="display:none;">
-        <div >
-            <img class="map" src="https://cdn.pixabay.com/photo/2018/01/31/05/43/web-3120321_960_720.png" alt="">
-        </div>
-        <div>
-            <p>MAP VIEW</p>
-        </div>
-    </div>
-    </div>
-
-
-    <footer>   
-        <div style="margin-left:2%;"><a href="contact.html" class="normallink">Contact Us</a></div>
-        <div id="pvtltd">© 2020 ROOM SEARCH PVT LTD</div>
-        <div id="social">
-            <a href="https://www.facebook.com" target="_blank"><img class="socialmedia" src="assests/images/facebook.png" alt="facebook"></a>
-            <a href="https://www.instagram.com" target="_blank"><img class="socialmedia" src="assests/images/instagram.png" alt="instagram"></a>
-            <a href="https://twitter.com" target="_blank"><img class="socialmedia" src="assests/images/twitter.png" alt="twitter"></a>
-        </div>       
-    </footer>
+        </footer>
 
 </body>
+
 </html>
