--- a/payment.html
+++ b/payment.html
@@ -1,29 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payment</title>
+
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="styles/payment.css">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 
 <body>
-    <div class="container">
-    
-        <header>
-            <div id="logo-div">
-                <a href="index.html"> <img src="assests/images/logo.png" alt="logo" id="logo"> </a>
-            </div>    
-            <div id="login">
-                <a href="login.html" class="normallink">Login</a>
-            </div>  
-        </header>
+
+    <header>
+        <div id="logo-div">
+            <a href="index.html"> <img src="assests/images/logo.png" alt="logo" id="logo"> </a>
+        </div>
+        <div id="login">
+            <button type="button" class="btn btn-light btn-sm" data-toggle="modal"
+                data-target="#exampleModal">LOGIN</button>
+
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Please Login</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <form action="">
+
+                                <label for="username" class="modal-form">Username:</label>
+                                <input type="text" name="username" id="username" placeholder="Enter Username"
+                                    required><br>
+
+                                <label for="password" class="modal-form">Password:</label>
+                                <input type="password" name="password" id="password" placeholder="Enter Password"
+                                    required>
+
+                            </form>
+                        </div>
+                        <div class="modal-footer" style="justify-content: center;">
+                            <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
+                            <button type="button" class="btn btn-primary">Login</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
 
     <div class="content">
         <div id="hoteldetail" style="display:flex; ">
             <div>
-                <img class="hotel" src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="" style="max-height:200px; max-width:270px;">
+                <img class="hotel" src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg"
+                    alt="" style="max-height:200px; max-width:270px;">
             </div>
             <div id="hotel-info">
                 <h2>Radisson Blu Hotel</h2>
@@ -31,7 +70,7 @@
                 <p>National Highway 8, New Delhi 110017 India</p>
             </div>
         </div>
-        
+
         <div id="lower-box">
             <div id="customerdetail">
                 <p>
@@ -57,20 +96,51 @@
                 </p>
             </div>
 
-            <div id="paynow-link"><a href="#" class="normal-link">Pay Now</a></div>
+            <div id="paynow-link"><a href="#" class="normal-link"><button type="button" class="btn btn-success" disabled>Pay Now</button></a></div>
         </div>
     </div>
 
-    <footer>   
-        <div style="margin-left:2%;"><a href="contact.html" class="normallink">Contact Us</a></div>
+    <footer>
+        <div style="margin-left:2%;">
+            <button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#exampleModal1">Contact
+                Us</button>
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Get in touch</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            Thank you for reaching out!!!<br>
+                            Please enter your email and we will get back to you.<br>
+                            <label for="email">Email:</label>
+                            <input type="email" placeholder="Enter your email id" required>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-primary">Submit</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Modal Ends -->
+        </div>
         <div id="pvtltd">© 2020 ROOM SEARCH PVT LTD</div>
         <div id="social">
-            <a href="https://www.facebook.com" target="_blank"><img class="socialmedia" src="assests/images/facebook.png" alt="facebook"></a>
-            <a href="https://www.instagram.com" target="_blank"><img class="socialmedia" src="assests/images/instagram.png" alt="instagram"></a>
-            <a href="https://twitter.com" target="_blank"><img class="socialmedia" src="assests/images/twitter.png" alt="twitter"></a>
-        </div>       
+            <a href="https://www.facebook.com" target="_blank"><img class="socialmedia"
+                    src="assests/images/facebook.png" alt="facebook"></a>
+            <a href="https://www.instagram.com" target="_blank"><img class="socialmedia"
+                    src="assests/images/instagram.png" alt="instagram"></a>
+            <a href="https://twitter.com" target="_blank"><img class="socialmedia" src="assests/images/twitter.png"
+                    alt="twitter"></a>
+        </div>
+
     </footer>
 
-    </div>
 </body>
+
 </html>
